maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:47: error: ':' expected but ')' found.
def isDirectionFree(dir) {
                       ^Escaper:55: error: identifier expected but '}' found.
}
^